--- a/frontend/views/public/templates/landing.html
+++ b/frontend/views/public/templates/landing.html
@@ -7,7 +7,7 @@
 {% endblock %}
 {% block content %}
 <div class="row-fluid">
-    <div class="span3">
+    <div class="span3 pagination-centered">
         <h2>Users</h2>
         <span class="count">0</span>
     </div>
