Added settings (change password, delete account)

--- a/frontend/templates/base/body.html
+++ b/frontend/templates/base/body.html
@@ -30,6 +30,7 @@
                         <b class="caret"></b>
                     </a>
                     <ul class="dropdown-menu">
+                        <li><a href="{{ url_for('account.settings') }}">Settings</a></li>
                         <li class="divider"></li>
                         <li><a href="{{ url_for('account.logout') }}">Logout</a></li>
                     </ul>
