--- a/frontend/views/account/templates/register.html
+++ b/frontend/views/account/templates/register.html
@@ -11,7 +11,7 @@
             {{ forms.render_field(form.confirm) }}
             <div class="form-actions">
                 <button type="submit" class="btn btn-primary">Create Account</button>
-                <a href="{{ url_for('.landing') }}" class="btn">Cancel</a>
+                <a href="{{ url_for('public.landing') }}" class="btn">Cancel</a>
             </div>
         </form>
     </div>
