--- a/frontend/static/css/custom.css
+++ b/frontend/static/css/custom.css
@@ -1,6 +1,17 @@
 body {
-	padding-top: 60px;
-	font-family: 'Arvo', serif;
+    padding-top: 70px;
+    font-family: 'Open Sans', sans-serif;
+    background-color: #2F2F2F;
 }
 
-.required {color: #DA4F49;}
+p {
+    font-weight: 400;
+}
+
+h1, h2, h3, h4, h5 {
+    font-weight: 300;
+}
+
+.required {
+    color: #DA4F49;
+}
