--- a/frontend/templates/base/body.html
+++ b/frontend/templates/base/body.html
@@ -8,7 +8,7 @@
 <head>
     <meta charset="utf-8">
     <title>{{ site_title }}</title>
-    <link href='http://fonts.googleapis.com/css?family=Arvo:400,700' rel='stylesheet' type='text/css'>
+    <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300' rel='stylesheet' type='text/css'>
     <link href="/css/bootstrap.css" rel="stylesheet" media="screen">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="/css/custom.css" rel="stylesheet" media="screen">
@@ -20,6 +20,7 @@
         <div class="navbar-inner">
             <ul class="nav">
                 {{ nav_link('public.landing', 'public.landing', 'Home') }}
+                {{ nav_link('projects.', 'projects.overview', 'Projects') }}
             </ul>
             <ul class="nav pull-right">
                 {% if g.user %}
