--- a/frontend/views/projects/templates/new_project.html
+++ b/frontend/views/projects/templates/new_project.html
@@ -10,7 +10,7 @@
             {{ forms.render_field(form.website ) }}
             {{ forms.render_field(form.public) }}
             <div class="form-actions">
-                <button type="submit" class="btn btn-primary">Create Account</button>
+                <button type="submit" class="btn btn-primary">Create Project</button>
                 <a href="{{ url_for('.overview') }}" class="btn">Cancel</a>
             </div>
         </form>
