--- a/frontend/templates/base/body.html
+++ b/frontend/templates/base/body.html
@@ -27,7 +27,7 @@
                 <li class="dropdown">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown">
                         <img src="{{ g.user.email | gravatar(size="20") }}"/>
-                        {{ g.user.email }}
+                        {{ g.user.username }}
                         <b class="caret"></b>
                     </a>
                     <ul class="dropdown-menu">
