--- a/frontend/views/projects/templates/delete_project.html
+++ b/frontend/views/projects/templates/delete_project.html
@@ -4,15 +4,13 @@
 <div class="row-fluid">
     <div class="span12 well">
         <form class="form form-horizontal" method='POST' action="{{ request.url }}">
-            <legend>Register</legend>
+            <legend>Delete Project</legend>
+            <p>Are you sure you want to delete the project <strong>{{ project.name }}</strong>?<br/>Enter your password to confirm.</p>
             {{ form.hidden_tag() }}
-            {{ forms.render_field(form.username) }}
-            {{ forms.render_field(form.email) }}
             {{ forms.render_field(form.password) }}
-            {{ forms.render_field(form.confirm) }}
             <div class="form-actions">
-                <button type="submit" class="btn btn-primary">Create Account</button>
-                <a href="{{ url_for('public.landing') }}" class="btn">Cancel</a>
+                <button type="submit" class="btn btn-danger">Delete Project</button>
+                <a href="{{ url_for('.overview') }}" class="btn btn-success">Cancel</a>
             </div>
         </form>
     </div>
