--- a/frontend/views/projects/templates/overview.html
+++ b/frontend/views/projects/templates/overview.html
@@ -18,12 +18,17 @@
                     <th>Website</th>
                     <th>Created</th>
                     <th>Public</th>
+                    <th></th>
                 </tr>
             </thead>
             <tbody>
                 {% for project in g.user.projects %}
                 <tr>
-                    <td>{{ project.name }}</td>
+                    <td>
+                        <a href="{{ url_for('.details', pid=project.id) }}">
+                            {{ project.name }}
+                        </a>
+                    </td>
                     <td>
                         {% if project.website %}
                         <a href="{{ project.website }}">Link</a>
@@ -33,11 +38,20 @@
                     </td>
                     <td>{{ project.created.strftime("%Y-%m-%d") }}</td>
                     <td><i class="icon-{% if project.public %}ok{% else %}lock{% endif %}"></i></td>
+                    <th>
+                        <div class="pull-right">
+                            <a href="{{ url_for('.edit_project', pid=project.id) }}" class="btn btn-mini">
+                                <i class="icon-edit"></i> Edit
+                            </a>
+                            <a href="{{ url_for('.delete_project', pid=project.id) }}" class="btn btn-mini btn-danger">
+                                <i class="icon-trash icon-white"></i> Delete
+                            </a>
+                        </div>
+                    </th>
                 </tr>
                 {% endfor %}
             </tbody>
         </table>
-        <a href="{{ url_for('.new') }}" class="btn btn-info">Export Projects</a>
     </div>
 </div>
 {% endif %}
