--- a/frontend/views/projects/templates/overview.html
+++ b/frontend/views/projects/templates/overview.html
@@ -26,7 +26,7 @@
                 <tr>
                     <td>
                         <a href="{{ url_for('.details', pid=project.id) }}">
-                            {{ project.name }}
+                            {{ project.full_name }}
                         </a>
                     </td>
                     <td>
