--- a/frontend/views/projects/templates/overview.html
+++ b/frontend/views/projects/templates/overview.html
@@ -18,6 +18,7 @@
                     <th>Website</th>
                     <th>Created</th>
                     <th>Public</th>
+                    <th>Hooks</th>
                     <th></th>
                 </tr>
             </thead>
@@ -38,6 +39,7 @@
                     </td>
                     <td>{{ project.created.strftime("%Y-%m-%d") }}</td>
                     <td><i class="icon-{% if project.public %}ok{% else %}lock{% endif %}"></i></td>
+                    <td>{{ project.hooks.count() }}</td>
                     <th>
                         <div class="pull-right">
                             <a href="{{ url_for('.edit_project', pid=project.id) }}" class="btn btn-mini">
@@ -55,4 +57,9 @@
     </div>
 </div>
 {% endif %}
+<div class="row-fluid">
+    <div class="span12 well">
+        <a href="{{ url_for('pimport.github') }}" class="btn btn-info">Import From Github</a>
+    </div>
+</div>
 {% endblock %}
