Added support for setting hooks

--- a/frontend/views/projects/templates/project_details.html
+++ b/frontend/views/projects/templates/project_details.html
@@ -19,7 +19,7 @@
             </div>
             <div class="span4 pagination-centered">
                 <h2>Hooks</h2>
-                <span class="count">0</span>
+                <span class="count">{{ project.hooks.count() }}</span>
             </div>
             <div class="span4 pagination-centered">
                 <h2>Channels</h2>
