--- a/frontend/views/projects/templates/overview.html
+++ b/frontend/views/projects/templates/overview.html
@@ -17,8 +17,8 @@
                     <th>Name</th>
                     <th>Website</th>
                     <th>Created</th>
-                    <th>Public</th>
-                    <th>Hooks</th>
+                    <th style="text-align: center;">Public</th>
+                    <th style="text-align: center;">Hooks</th>
                     <th></th>
                 </tr>
             </thead>
@@ -38,8 +38,10 @@
                         {% endif %}
                     </td>
                     <td>{{ project.created.strftime("%Y-%m-%d") }}</td>
-                    <td><i class="icon-{% if project.public %}ok{% else %}lock{% endif %}"></i></td>
-                    <td>{{ project.hooks.count() }}</td>
+                    <td style="text-align: center;">
+                        <i class="icon-{% if project.public %}ok{% else %}lock{% endif %}"></i>
+                    </td>
+                    <td style="text-align: center;">{{ project.hooks.count() }}</td>
                     <th>
                         <div class="pull-right">
                             <a href="{{ url_for('.edit_project', pid=project.id) }}" class="btn btn-mini">
