Cancel on new hook now takes you back to the project page.

--- a/frontend/views/projects/templates/new_hook.html
+++ b/frontend/views/projects/templates/new_hook.html
@@ -9,7 +9,7 @@
             {{ forms.render_field(form.service_id) }}
             <div class="form-actions">
                 <button type="submit" class="btn btn-primary">Create Project</button>
-                <a href="{{ url_for('.overview') }}" class="btn">Cancel</a>
+                <a href="{{ url_for('.details', pid=project.id) }}" class="btn">Cancel</a>
             </div>
         </form>
     </div>
