--- a/frontend/views/projects/templates/project_details.html
+++ b/frontend/views/projects/templates/project_details.html
@@ -33,17 +33,19 @@
     Only the owner should be able to see hooks. 
 #}
 <div class="row-fluid">
-    <div class="span6 well">
+    <div class="span12 well">
         <a id="hooks"></a>
         <h1>Hooks</h1>
         <p><em>Hooks</em> are endpoints for 3rd party services (and scripts) capable of making a HTTP POST request. For example, you can create a hook for Github's <a href="https://help.github.com/articles/post-receive-hooks">WebHooks</a> service. Hooks recieve messages, which are then formatted and forwarded to <a href="#channels">IRC channels</a>.</p>
         <a href="{{ url_for('.new_hook', pid=project.id) }}" class="btn btn-primary">Create New Hook</a>
     </div>
-    <div class="span6 well">
+</div>
+<div class="row-fluid">
+    <div class="span12 well">
         {% if not project.hooks.count() %}
-        <p>You haven't created any hooks yet.</p>
+        <small>You haven't created any hooks yet for this project.</small>
         {% else %}
-        <table class="table">
+        <table class="table" style='margin-bottom: 0;'>
             <thead>
                 <tr>
                     <th>Service Name</th>
@@ -69,7 +71,6 @@
         </table>
         {% endif %}
     </div>
-</div>
 {% endif %}
 {#
     Anyone can see what channels the project is announced to, so
