--- a/notifico/views/projects/templates/edit_project.html
+++ b/notifico/views/projects/templates/edit_project.html
@@ -6,7 +6,7 @@
         <form class="form form-horizontal" method='POST' action="{{ request.url }}">
             <legend>Edit Project</legend>
             {{ form.hidden_tag() }}
-            {{ forms.render_field(form.name, readonly=True) }}
+            {{ forms.render_field(form.name) }}
             {{ forms.render_field(form.website ) }}
             {{ forms.render_field(form.public) }}
             <div class="form-actions">
