Show # of channels on homepage

--- a/notifico/views/public/templates/landing.html
+++ b/notifico/views/public/templates/landing.html
@@ -32,7 +32,7 @@
             </div>
             <div class="span4 pagination-centered">
                 <h2>Channels</h2>
-                <span class="count">0</span>
+                <span class="count">{{ Channel.query.count() }}</span>
             </div>
         </div>
     </div>
