--- a/notifico/views/projects/templates/overview.html
+++ b/notifico/views/projects/templates/overview.html
@@ -19,6 +19,8 @@
                     <th>Created</th>
                     <th style="text-align: center;">Public</th>
                     <th style="text-align: center;">Hooks</th>
+                    <th style="text-align: center;">Messages</th>
+                    <th style="text-align: center;">Channels</th>
                     <th></th>
                 </tr>
             </thead>
@@ -42,6 +44,8 @@
                         <i class="icon-{% if project.public %}ok{% else %}lock{% endif %}"></i>
                     </td>
                     <td style="text-align: center;">{{ project.hooks.count() }}</td>
+                    <td style="text-align: center;">{{ project.message_count }}</td>
+                    <td style="text-align: center;">{{ project.channels.count() }}</td>
                     <th>
                         <div class="pull-right">
                             <a href="{{ url_for('.edit_project', pid=project.id) }}" class="btn btn-mini">
