Show project name on details page

--- a/notifico/views/projects/templates/project_details.html
+++ b/notifico/views/projects/templates/project_details.html
@@ -12,6 +12,11 @@
 {% block content %}
 <div class="row-fluid">
     <div class="span12 well">
+        <h1>{{ project.full_name }}</h1>
+    </div>
+</div>
+<div class="row-fluid">
+    <div class="span12 well">
         <div class="row-fluid">
             <div class="span4 pagination-centered">
                 <h2>Messages</h2>
