Add fixlink filter and use it on overview and new projects

--- a/notifico/views/projects/templates/overview.html
+++ b/notifico/views/projects/templates/overview.html
@@ -34,7 +34,7 @@
                     </td>
                     <td>
                         {% if project.website %}
-                        <a href="{{ project.website }}">Link</a>
+                        <a href="{{ project.website|fixlink }}">Link</a>
                         {% else %}
                         -
                         {% endif %}
