--- a/notifico/views/projects/templates/delete_hook.html
+++ b/notifico/views/projects/templates/delete_hook.html
@@ -8,7 +8,7 @@
             <p>Are you sure you want to delete this hook? You will not be able to create one with the same URL, and will have to reconfigure any services.</p>
             <div class="form-actions">
                 <button type="submit" class="btn btn-danger" value='d' name='do'>Delete Hook</button>
-                <a href="{{ url_for('.details', pid=project.id) }}" class="btn btn-success">Cancel</a>
+                <a href="{{ url_for('.details', u=g.user.username, p=project.name) }}" class="btn btn-success">Cancel</a>
             </div>
         </form>
     </div>
