--- a/notifico/views/projects/templates/new_hook.html
+++ b/notifico/views/projects/templates/new_hook.html
@@ -9,7 +9,7 @@
             {{ forms.render_field(form.service_id) }}
             <div class="form-actions">
                 <button type="submit" class="btn btn-primary">Create Project</button>
-                <a href="{{ url_for('.details', pid=project.id) }}" class="btn">Cancel</a>
+                <a href="{{ url_for('.details', u=g.user.username, p=project.name) }}" class="btn">Cancel</a>
             </div>
         </form>
     </div>
