--- a/notifico/views/public/templates/landing.html
+++ b/notifico/views/public/templates/landing.html
@@ -43,9 +43,9 @@
         <h2>Newest Projects</h2>
         {% for project in Project.public_q().order_by(Project.created.desc()).limit(10) %}
         <div>
-            <a href="{{ url_for('projects.details', pid=project.id) }}">{{ project.full_name }}</a><br/>
+            <a href="{{ url_for('projects.details', u=project.owner.username, p=project.name) }}">{{ project.full_name }}</a><br/>
             <small>
-                Created: {{ project.created.strftime("%Y-%m-%d") }}
+                Created on {{ project.created.strftime("%Y-%m-%d") }} by <a href="{{ url_for('projects.overview', u=project.owner.username) }}">{{ project.owner.username }}</a>
                 {% if project.website %}
                 | {{ project.website|fixlink|urlize(40, True) }}
                 {% endif %}
